# papers

./: .env.development  .gitignore  Brewfile  Procfile  README.md  TODO.md  Taskfile.yaml  main.py  pyproject.toml
.github/workflows/: ci.yaml
core/: pytest.ini
core/core/: asgi.py  base.py  development.py  models.py  production.py  settings.py  urls.py  validators.py  views.py
core/core/management/commands/: setup_db.py
core/core/migrations/: 0001_initial.py  0002_customer_customeraddress.py  0003_customer_shopify_id_customeraddress_shopify_id_and_more.py  0004_customeraddress_customer_shopify_id_and_more.py
core/core/settings/: __init__.py  base.py  development.py  production.py
core/core/static/js/: htmx.min.js
core/core/tests/: test_webhooks.py
core/core/tests/webhooks/: test_customers.py
core/templates/: base.html  home.html  shopify_buy_button.html  subscribe.html
core/templates/store/: annual_button.html  monthly_button.html
core/users/: admin.py  models.py  urls.py  views.py
core/users/templates/: cancel.html  login.html  settings.html  subscribe.html  success.html
core/users/templates/auth/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signup.html
core/users/templates/emails/: password_reset_email.html  password_reset_email.txt  password_reset_subject.txt
core/users/templates/users/: login.html  signup.html
