[project]
name = "papers"
version = "0.1.0"
description = "The source code for Slam Dunk Software's subscription service(s) which help developers learn new skills and keep the old skills sharp."
authors = [{ name = "Nick Agliano", email = "nick@slamdunk.software" }]
license = { text = "MIT" }
requires-python = "==3.13.2"
dependencies = [
    "django>=4.2.20",
    "django-extensions>=3.2.3",
    "django-stubs>=5.1.3",
    "gunicorn>=23.0.0",
    "hypothesis>=6.113.0",
    "ipython>=9.0.2",
    "mypy>=1.14.1",
    "psycopg2>=2.9.10",
    "pydantic>=2.10.6",
    "pytest>=8.3.5",
    "ruff>=0.11.1",
    "sentry-sdk>=2.25.1",
    "typing-extensions>=4.12.2",
    "whitenoise>=6.9.0",
]
